[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/Cutscene/BookStyles/BookButton.tres" type="StyleBox" id=1]
[ext_resource path="res://Fonts/ink-free-normal.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/GFX/cutscene/Book/pen.png" type="Texture" id=3]
[ext_resource path="res://Assets/GFX/UI/bookOpen.png" type="Texture" id=5]
[ext_resource path="res://Assets/GFX/UI/blueMushIcon.png" type="Texture" id=6]
[ext_resource path="res://Assets/GFX/cutscene/Book/arrow.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Cutscene/TransitionBook.gd" type="Script" id=8]
[ext_resource path="res://Assets/GFX/cutscene/Book/arrow-right.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 38
outline_size = 1
outline_color = Color( 0.0156863, 0.545098, 0.6, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxLine" id=2]
color = Color( 0.0156863, 0.545098, 0.6, 1 )
thickness = 4

[sub_resource type="DynamicFont" id=3]
size = 22
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_top = 5
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 22
use_filter = true
extra_spacing_top = 5
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 22
outline_color = Color( 0.823529, 0, 0, 1 )
use_filter = true
extra_spacing_top = 10
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=6]
length = 3.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Notes:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../BlueMushroom/PathFollow2D:unit_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.06 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../BlueMushroom/PathFollow2D/Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.02, 2.07, 2.41 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}

[sub_resource type="Curve2D" id=7]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 513.015, 116.236, 0, 0, 0, 0, 883.52, 545.422 )
}

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.258824, 0.258824, 0.258824, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="DynamicFont" id=8]
size = 31
use_filter = true
font_data = ExtResource( 2 )

[node name="TransitionBook" type="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -356.339
margin_top = 21.4057
margin_right = 232.661
margin_bottom = 510.406
rect_scale = Vector2( 1.24, 1.24 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BookTexture" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -294.5
margin_top = -174.5
margin_right = -254.5
margin_bottom = -204.5
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="BookTexture"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 41
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftContainer" type="VBoxContainer" parent="BookTexture/HBoxContainer"]
margin_left = 69.0
margin_right = 469.0
margin_bottom = 691.0
rect_min_size = Vector2( 400, 0 )
custom_constants/separation = 30
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="BookTexture/HBoxContainer/LeftContainer"]
margin_top = 90.0
margin_right = 400.0
margin_bottom = 190.0
alignment = 1

[node name="MushroomContainer" type="HBoxContainer" parent="BookTexture/HBoxContainer/LeftContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 100.0

[node name="MushroomTitle" type="RichTextLabel" parent="BookTexture/HBoxContainer/LeftContainer/VBoxContainer/MushroomContainer"]
margin_right = 250.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 100 )
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.0156863, 0.545098, 0.6, 1 )
bbcode_enabled = true
bbcode_text = "Blue Mushroom"
text = "Blue Mushroom"
fit_content_height = true

[node name="Mushroom" type="TextureRect" parent="BookTexture/HBoxContainer/LeftContainer/VBoxContainer/MushroomContainer"]
margin_left = 254.0
margin_right = 341.0
margin_bottom = 100.0
rect_min_size = Vector2( 87, 99 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="LineBreak" type="Panel" parent="BookTexture/HBoxContainer/LeftContainer"]
margin_top = 220.0
margin_right = 400.0
margin_bottom = 220.0
custom_styles/panel = SubResource( 2 )

[node name="Description" type="RichTextLabel" parent="BookTexture/HBoxContainer/LeftContainer"]
margin_top = 250.0
margin_right = 400.0
margin_bottom = 600.0
rect_min_size = Vector2( 400, 350 )
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "The blue mushroom with spots is very similar to the blue mushroom without spots. The mushroom lives in sunlight,** but is more difficult to treat than the one without spots when it gets out of control which can occur in darkness. When it thrives in darkness, [b]1 dose of the yellow spray is needed to treat it.[/b]
"
text = "The blue mushroom with spots is very similar to the blue mushroom without spots. The mushroom lives in sunlight,** but is more difficult to treat than the one without spots when it gets out of control which can occur in darkness. When it thrives in darkness, 1 dose of the yellow spray is needed to treat it.
"

[node name="RightContainer" type="VBoxContainer" parent="BookTexture/HBoxContainer"]
margin_left = 510.0
margin_right = 910.0
margin_bottom = 691.0
rect_min_size = Vector2( 400, 0 )
alignment = 1

[node name="Notes" type="RichTextLabel" parent="BookTexture/HBoxContainer/RightContainer"]
margin_top = 95.0
margin_right = 400.0
margin_bottom = 595.0
rect_min_size = Vector2( 400, 500 )
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 0.823529, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "The blue mushrooms MUST be sprayed by the pink spray bottle. The player selects the spray bottle from the backpack and loads it into the cannon. Once loaded the player has to hit the blue mushroom. Once hit X1 the mushroom brightens and sprays miniscule spores that lightens the mist ever so slightly. The mushrooms work as trampolines. The spray droplet will hit the mushroom, bounce to the next mushroom depending on angle of spray."
visible_characters = 0
percent_visible = 0.0
text = "The blue mushrooms MUST be sprayed by the pink spray bottle. The player selects the spray bottle from the backpack and loads it into the cannon. Once loaded the player has to hit the blue mushroom. Once hit X1 the mushroom brightens and sprays miniscule spores that lightens the mist ever so slightly. The mushrooms work as trampolines. The spray droplet will hit the mushroom, bounce to the next mushroom depending on angle of spray."

[node name="AnimationPlayer" type="AnimationPlayer" parent="BookTexture/HBoxContainer/RightContainer"]
anims/ShowDescription = SubResource( 6 )

[node name="ArrowContainer" type="HBoxContainer" parent="BookTexture"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -450.214
margin_top = -112.0
margin_right = 8651.79
margin_bottom = 885.0
rect_scale = Vector2( 0.1, 0.1 )
custom_constants/separation = 7000
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftButton" type="TextureButton" parent="BookTexture/ArrowContainer"]
margin_right = 1051.0
margin_bottom = 997.0
texture_normal = ExtResource( 7 )

[node name="RightButton" type="TextureButton" parent="BookTexture/ArrowContainer"]
margin_left = 8051.0
margin_right = 9102.0
margin_bottom = 997.0
texture_normal = ExtResource( 9 )

[node name="BlueMushroom" type="Path2D" parent="BookTexture"]
curve = SubResource( 7 )

[node name="PathFollow2D" type="PathFollow2D" parent="BookTexture/BlueMushroom"]
position = Vector2( 513.015, 116.236 )
rotation = 0.00520463
rotate = false
loop = false

[node name="Sprite" type="Sprite" parent="BookTexture/BlueMushroom/PathFollow2D"]
position = Vector2( 1.54279, 2.56921 )
rotation = 0.824467
scale = Vector2( 0.649022, 0.649022 )
texture = ExtResource( 3 )
offset = Vector2( 2.67004, -267.01 )

[node name="WritingTween" type="Tween" parent="BookTexture"]

[node name="Button" type="Button" parent="BookTexture"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -46.0
margin_right = 4.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = SubResource( 8 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BookTexture/ArrowContainer/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="BookTexture/ArrowContainer/RightButton" to="." method="_on_RightButton_pressed"]
[connection signal="pressed" from="BookTexture/Button" to="." method="_on_Button_pressed"]
